# yals

./: .gitignore  LICENSE  Makefile  README.md  release_notes.md  todo.md
board/hw/: .gitignore  Makefile  engine_ctrl.kicad_sch  fp-lib-table  kicad  make  microcontroller.kicad_sch  power.kicad_sch  sdk  sr_passives_potentiometers.kicad_sym  sym-lib-table  ti_eng_driver.kicad_sym  yals.kicad_pcb  yals.kicad_prl  yals.kicad_pro  yals.kicad_sch
board/hw/docker/: Dockerfile  download_kicad  generate_bom  generate_stl  list_cu_layers  print_on_error
board/hw/st_passives_potentiometers.pretty/: CDE23N-60-B50K.kicad_mod
board/sw/: CMakeLists.txt  Context.hpp  Controller.hpp  Controller.ut.cpp  Handler.hpp  Handler.ut.cpp  Makefile  blink.c  clocks.cmake  compile_and_flash  flash_blink  git.cmake  main.cpp  servo_ctrl.cpp  sim.ut.cpp  try  yals_board.h
board/sw/Hal/: All.hpp  Clock.hpp  EEPROM.hpp  Engine.hpp  Engine_current.hpp  Led.hpp  Position_feedback.hpp  Uart.hpp  Uart.mtest.cpp  Vcc_feedback.hpp  Vcc_feedback.mtest.cpp  Watchdog.hpp  sleep.hpp
board/sw/Hal/detail/: EEPROM.hpp
board/sw/Hal/rp2040/: CMakeLists.txt  common_post.cmake  common_pre.cmake
board/sw/Hal/rp2040/Hal/: Clock.mtest.cpp  EEPROM.mtest.cpp  EEPROM_impl.mtest.cpp  Engine.mtest.cpp  Engine_current.hpp  I2C_bus_scan.mtest.cpp  I2C_direct_io.mtest.cpp  Led.mtest.cpp  Position_feedback.mtest.cpp  RP_bus_scan.mtest.cpp  Uart.mtest.cpp  Vcc_feedback.hpp  Watchdog.mtest.cpp
board/sw/Hal/rp2040/Hal/Impl/: Clock.hpp  EEPROM.hpp  Engine.hpp  Engine_current.hpp  Led.hpp  Position_feedback.hpp  Uart.hpp  Vcc_feedback.hpp  Watchdog.hpp  sleep.hpp  write_helpers.hpp
board/sw/Hal/simulate/: CMakeLists.txt  common_post.cmake
board/sw/Hal/simulate/Hal/: Engine.hpp  Engine_current.hpp  Led.hpp  Position_feedback.hpp  Sim.hpp  Uart.hpp  Vcc_feedback.hpp
board/sw/Hal/simulate/Hal/Impl/: Clock.hpp  EEPROM.hpp  Engine.hpp  Engine_current.hpp  Led.hpp  Position_feedback.hpp  Uart.hpp  Vcc_feedback.hpp  Watchdog.hpp  sleep.hpp
board/sw/Io/: Buffer.hpp  Buffer.ut.cpp  Frame.hpp  Frame.ut.cpp  Line.hpp  Line.ut.cpp  Mtu.hpp  Mtu.ut.cpp  checksum.hpp  checksum.ut.cpp  const.hpp  process.hpp  process.ut.cpp  utils.hpp
board/sw/Io/Proto/: Get_persistent_config.hpp  Get_servo_position.hpp  Get_telemetry.hpp  Ping.hpp  Set_LED_brightness.hpp  Set_max_servo_position.hpp  Set_min_servo_position.hpp  Set_servo_position.hpp  common.hpp  common.ut.cpp
board/sw/Utils/: CMakeLists.txt  Engine_controller.hpp  Engine_controller.mtest.cpp  Engine_controller.ut.cpp  Engine_controller_auto_jog.mtest.cpp  Engine_controller_rapid_change.mtest.cpp  PID_controller.hpp  time.hpp  version.cpp.in  version.hpp  write_helpers.hpp
board/sw/Utils/Config/: config.hpp  settings.hpp
board/sw/cmake/: git.cmake  version_proxy.cmake
board/sw/mtest/: adc_eng_current.cpp  adc_pos_feedback.cpp  adc_vcc.cpp  blink.cpp  engine.cpp  serial.cpp
body/: project.config  servo_body.scad
body/detail/: config.scad
body/mock/: .gitignore  pcb.scad  pcb.stl
doc/: engines_tests.md  features.md  protocol.md
model/: carriage.ini  project.config
model/detail/: config.scad
model/mock/: lin_pot.scad  pcb.scad
parts/: carriage.ini  carriage.scad  coupler.ini  coupler.scad  project.config  servo_body.ini  servo_body.scad  servo_body_top_mount.scad
parts/config/printer/anycubic_chiron/: printer.ini.orig  printer.ini.rej
parts/detail/: config.scad
parts/mock/: bearing.scad  engine.scad  lin_pot.scad  universal_joint.scad
